--- a/HOME.html
+++ b/HOME.html
@@ -5,14 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>AniMaDB</title>
         <meta name="description" content="Anime and Manga Database">
-        <link rel="stylesheet" href="DB.css">
+        <link rel="stylesheet" href="CSS/HOME_CSS.css">
     </head>
     <body>
         <div class="box">
             <h1>Anime & Manga Database</h1>
             <h2>Choose the database you want to visit or create</h2>
-                <a href="Anadm.html" class="btnmenu">Anime DB</a>
-                <a href="Anadm.html" class="btnmenu">Manga DB</a>
+                <a href="AniDB.html" class="btnmenu">Anime DB</a>
+                <a href="ManDB.html" class="btnmenu">Manga DB</a>
+                <a href="login.php" class="logoutbtn">Logout</a>
         </div>
     </body>
 </html>
